docs/api/qiskit/0.43/qiskit.pulse.builder.build.md
---
title: build
description: API reference for qiskit.pulse.builder.build
in_page_toc_min_heading_level: 1
python_api_type: function
python_api_name: qiskit.pulse.builder.build
---

<span id="qiskit-pulse-builder-build" />

# qiskit.pulse.builder.build

<span id="qiskit.pulse.builder.build" />

`build(backend=None, schedule=None, name=None, default_alignment='left', default_transpiler_settings=None, default_circuit_scheduler_settings=None)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/pulse/builder.py "view source code")

Create a context manager for launching the imperative pulse builder DSL.

To enter a building context and starting building a pulse program:

```python
from qiskit import execute, pulse
from qiskit.providers.fake_provider import FakeOpenPulse2Q

backend = FakeOpenPulse2Q()

d0 = pulse.DriveChannel(0)

with pulse.build() as pulse_prog:
    pulse.play(pulse.Constant(100, 0.5), d0)
```

While the output program `pulse_prog` cannot be executed as we are using a mock backend. If a real backend is being used, executing the program is done with:

```python
qiskit.execute(pulse_prog, backend)
```

**Parameters**

*   **backend** ([*Backend*](qiskit.providers.Backend "qiskit.providers.Backend")) – A Qiskit backend. If not supplied certain builder functionality will be unavailable.
*   **schedule** ([*ScheduleBlock*](qiskit.pulse.ScheduleBlock "qiskit.pulse.schedule.ScheduleBlock") *| None*) – A pulse `ScheduleBlock` in which your pulse program will be built.
*   **name** (*str | None*) – Name of pulse program to be built.
*   **default\_alignment** (*str |* [*AlignmentKind*](pulse#qiskit.pulse.transforms.AlignmentKind "qiskit.pulse.transforms.alignments.AlignmentKind") *| None*) – Default scheduling alignment for builder. One of `left`, `right`, `sequential` or an alignment context.
*   **default\_transpiler\_settings** (*Dict\[str, Any] | None*) – Default settings for the transpiler.
*   **default\_circuit\_scheduler\_settings** (*Dict\[str, Any] | None*) – Default settings for the circuit to pulse scheduler.

**Returns**

A new builder context which has the active builder initialized.

**Return type**

*AbstractContextManager*\[[*ScheduleBlock*](qiskit.pulse.ScheduleBlock "qiskit.pulse.schedule.ScheduleBlock")]

